[package]
name = "multi-bomb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.10", features = ["ws"] }
axum-macros = "0.3.5"
rand = "0.8.5"
random = "0.13.2"
random_color = "0.6.1"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.4.0", features = ["fs"]}
